[project]
name = "app-manager"
version = "0.0.1"
description = "App manager entrypoint"
requires-python = ">=3.10"
dependencies = [
    "jinja2",
    "wexample-wex-addon-app==0.0.53",
    "wexample-wex-addon-dev-python==0.0.61",
    "wexample-wex-addon-filestate==0.0.15",
    "wexample-wex-core==6.0.65",
    "wexample-file==0.0.49",
    "wexample-filestate==0.0.71",
]

[tool.pdm]
distribution = false
